# extraction-pipeline

./: .env.example  .gitignore  Makefile  README.md  manifest  pyproject.toml
.beads/: metadata.json
.prompts/: domain4-build-exercise.prompt.md
deliverables/: domain4-build-exercise.md
src/contract_extraction/: __init__.py  batch.py  batch_extractor.py  demo.py  extractor.py  few_shot.py  live.py  pipeline.py  retry.py  reviewer.py  risk.py  routing.py  sample_documents.py  schemas.py  tool.py  validator.py
tests/: test_batch.py  test_batch_extractor.py  test_demo.py  test_few_shot.py  test_live.py  test_pipeline.py  test_retry.py  test_reviewer.py  test_risk.py  test_routing.py  test_schemas.py  test_tool.py  test_validator.py
